Fixed profile html errors

--- a/mbp-webapp/src/app/profil/profil.component.html
+++ b/mbp-webapp/src/app/profil/profil.component.html
@@ -10,7 +10,7 @@
 				</div>
 				<div class="col-6">
 					<input type="text" class="form-control form-control-sm" 
-					 id="prenom" readonly="readonly" formControlName="prenom">		
+					 id="prenom" formControlName="prenom">		
 				</div>
         	</div>
         	<div class="row MBP-top5">
@@ -19,7 +19,7 @@
 				</div>
 				<div class="col-6">
 					<input type="text" class="form-control form-control-sm" 
-					id="nom" readonly="readonly" formControlName="nom">			
+					id="nom" formControlName="nom">			
 				</div>
         	</div>
 			<div class="MBP_LINE_1PX MBP-top5"></div>  
@@ -29,7 +29,7 @@
 				</div>
 				<div class="col-6">
 					<input type="text" class="form-control form-control-sm" formControlName="bornDate"
-					id="bornDate" readonly="readonly">			
+					id="bornDate">			
 				</div>
         	</div>
         	<div class="row MBP-top5">
@@ -37,8 +37,8 @@
 					<label>Sexe : </label>
 				</div>
 				<div class="col-6">
-					<input type="text" class="form-control form-control-sm" readonly="readonly"
-					id="sexe" [value]="myUser.sexe === 'H' ? 'Homme' : myUser.sexe === 'F' ? 'Femme' : 'Autre'">		
+					<input type="text" class="form-control form-control-sm"
+					id="sexe" formControlName="sexe">		
 				</div>
         	</div>
 			<div class="MBP_LINE_1PX MBP-top5"></div>  
@@ -57,7 +57,7 @@
 				</div>
 				<div class="col-6">
 					<input type="text" class="form-control form-control-sm" 
-					disabled="disabled" [value]="myUser.sid.nom">
+					formControlName="sid">
 				</div>
 			</div>
 			<div class="row MBP-top5">
@@ -65,7 +65,7 @@
 					<label>Changer de salle :</label>
 				</div>
 				<div class="col-6">
-        	        <select id="sid" class="form-control form-control-sm" formControlName="sid">
+        	        <select id="sid" class="form-control form-control-sm" formControlName="sidList">
             	        <option *ngFor="let salle of obsSalles | async" value="{{salle.sid}}">{{salle.nom}}</option>
             	    </select>
            	 	</div>
@@ -77,7 +77,7 @@
 				</div>
 				<div class="col-6">
 					<input type="text" class="form-control form-control-sm" 
-					id="username" disabled="disabled" formControlName="username">			
+					id="username" formControlName="username">			
 				</div>
 			</div>
 			<div class="row MBP-top5">
@@ -85,9 +85,9 @@
 					<label>Changer de mot passe : </label>
 				</div>
 				<div class="col-6">
-					<input type="password" class="form-control form-control-sm" formControlName="password">		
+					<input type="password" value="" class="form-control form-control-sm" formControlName="password">		
 					<p class="text-info">Au moins 7 caractères avec 1 majuscule, 1 miniscule et 1 chiffre</p>
-					<p class="text-danger" *ngIf="this.getHashedPassword(this.profilForm.value['password']) === myUser.password">Ce mot de passe est identique au mot de passe actuel !</p>
+					<p class="text-danger" *ngIf="this.getHashedPassword(this.profilForm.value['password']) === this.password">Ce mot de passe est identique au mot de passe actuel !</p>
 				</div>
 			</div>
 			<div class="row MBP-top5">
@@ -107,8 +107,8 @@
 				</div>
 				<div class="col-6">
 					<button class="btn float-right MBP_BTN_SUBMIT" type="submit" 
-					*ngIf="this.profilForm.value['adresse'] !== myUser.adresse || 
-					(+this.profilForm.value['sid'] !== myUser.sid.sid && +this.profilForm.value['sid'] !==0) || 
+					*ngIf="this.profilForm.value['adresse'] !== this.adresse || 
+					(+this.profilForm.value['sidList'] !== this.sid && +this.profilForm.value['sidList'] !==0) || 
 					(this.profilForm.value['password'] !== '' &&
 					this.getHashedPassword(this.profilForm.value['password']) !== myUser.password)"
 					[disabled]="profilForm.invalid">Enregistrer mes informations</button>
