Ajout de la liste des annonces

--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -1,18 +1,12 @@
 <table class="table">
   <thead>
   <tr>
-    <th scope="col">#</th>
-    <th scope="col">First</th>
-    <th scope="col">Last</th>
-    <th scope="col">Handle</th>
+    <th scope="col">Prénom</th>
+    <th scope="col">Nom de l'annonce</th>
+    <th scope="col">Description</th>
+    <th scope="col">Date</th>
+    <th scope="col">Durée</th>
+    <th scope="col">Actions</th>
   </tr>
   </thead>
-  <tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>Mark</td>
-    <td>Otto</td>
-    <td>@mdo</td>
-  </tr>
-  </tbody>
 </table>
