--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -9,4 +9,17 @@
     <th scope="col">Actions</th>
   </tr>
   </thead>
+  <tbody>
+    <tr *ngFor="let item of ItemsArray">
+      <td>{{item.nomAnnonce}}</td>
+      <td>{{item.prenom}}</td>
+      <td>{{item.description}}</td>
+      <td>{{item.dateSeance}}</td>
+      <td>{{item.duree}}</td>
+      <td>
+        <button type="button" routerLink="/editAdvert/{{item.aid}}">Edit</button>
+        <button type="button" (click)="deleteAdvertById(item.aid)">Delete</button>
+      </td>
+    </tr>
+  </tbody>
 </table>
