--- a/mbp-webapp/src/app/profil/profil.component.html
+++ b/mbp-webapp/src/app/profil/profil.component.html
@@ -103,7 +103,7 @@
 			<div class="MBP_LINE_1PX MBP-top5"></div>  
         	<div class="row MBP-top5">
             	<div class="col-6 MBP-padding-left-10">
-					<button class="btn btn-danger">Résilier mon compte</button>
+					<button type="button" class="btn btn-danger" (click)="open(content)">Résilier mon compte</button>
 				</div>
 				<div class="col-6">
 					<button class="btn float-right MBP_BTN_SUBMIT" type="submit" 
@@ -120,3 +120,19 @@
 		</form>
     </div>
 </div>
+<ng-template #content>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Résiliation de compte</h4>
+    <button type="button" class="close" aria-label="Close" (click)="this.modal.dismissAll('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+	<p>Êtes-vous sûr de vouloir résilier votre compte MyBodyPartner ?</p>
+	<p>Cette action est irrévocable.</p>
+  </div>
+  <div class="modal-footer">
+	<button type="button" class="btn btn-danger" (click)="this.cancelAccount()">Oui</button>
+    <button type="button" class="btn btn-outline-dark" (click)="this.modal.dismissAll('Cross click')">Non</button>
+  </div>
+</ng-template>
