ajout css sur alert mais pas fou

--- a/mbp-webapp/src/app/classic-alert/classic-alert.component.html
+++ b/mbp-webapp/src/app/classic-alert/classic-alert.component.html
@@ -9,6 +9,6 @@
         {{ message }}
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="dismiss()">{{ btnText }}</button>
+        <button type="button" class="btn btn-light" (click)="dismiss()">{{ btnText }}</button>
     </div>
 </div>
