--- a/mbp-webapp/src/app/confirm-alert/confirm-alert.component.html
+++ b/mbp-webapp/src/app/confirm-alert/confirm-alert.component.html
@@ -9,7 +9,7 @@
         {{ message }}
     </div>
     <div class="modal-footer">
+        <button type="button" class="btn btn-light" (click)="accept()">{{ btnOkText }}</button>
         <button type="button" class="btn btn-danger" (click)="decline()">{{ btnCancelText }}</button>
-        <button type="button" class="btn btn-primary" (click)="accept()">{{ btnOkText }}</button>
     </div>
 </div>
