--- a/mbp-webapp/src/app/acceuil/acceuil.component.html
+++ b/mbp-webapp/src/app/acceuil/acceuil.component.html
@@ -24,3 +24,9 @@
     </div>
   </ng-template>
 </ngb-carousel>
+<div class="MBP-alert">
+	<ngb-alert *ngIf="inscription" [dismissible]="false" type="success" (close)="inscription = false">{{inscription_success}}</ngb-alert>
+</div>
+<div class="MBP-alert">
+	<ngb-alert *ngIf="cancel" [dismissible]="false" type="info" (close)="cancel = false">{{cancel_success}}</ngb-alert>
+</div>
