--- a/mbp-webapp/src/app/edit-advert/edit-advert.component.html
+++ b/mbp-webapp/src/app/edit-advert/edit-advert.component.html
@@ -44,7 +44,7 @@
       </div>
       <div class="row">
         <div class="col text-center">
-          <button type="submit" class="btn MBP_BTN_SUBMIT">Créer</button>
+          <button type="submit" class="btn MBP_BTN_SUBMIT">Mettre à jour</button>
         </div>
       </div>
     </form>
