--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -1,18 +1,25 @@
 <table class="table">
   <thead>
   <tr>
-    <th scope="col">#</th>
-    <th scope="col">First</th>
-    <th scope="col">Last</th>
-    <th scope="col">Handle</th>
+    <th scope="col">Prénom</th>
+    <th scope="col">Nom de l'annonce</th>
+    <th scope="col">Description</th>
+    <th scope="col">Date</th>
+    <th scope="col">Durée</th>
+    <th scope="col">Actions</th>
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>Mark</td>
-    <td>Otto</td>
-    <td>@mdo</td>
-  </tr>
+    <tr *ngFor="let item of ItemsArray">
+      <td>{{item.nomAnnonce}}</td>
+      <td>{{item.prenom}}</td>
+      <td>{{item.description}}</td>
+      <td>{{item.dateSeance}}</td>
+      <td>{{item.duree}}</td>
+      <td>
+        <button type="button" routerLink="/editAdvert/{{item.aid}}">Edit</button>
+        <button type="button" class="close" (click)="deleteAdvertById(item.aid)">Delete</button>
+      </td>
+    </tr>
   </tbody>
 </table>
