--- a/mbp-webapp/src/app/inscription/inscription.component.html
+++ b/mbp-webapp/src/app/inscription/inscription.component.html
@@ -1,6 +1,6 @@
 <div class="MBP_CORPS">
     <div class="MBP_CORPS_TITRE">
-        <div class="h2">Inscription</div>
+        <div class="h2 text-center">Inscription</div>
     </div>
     <div class="MBP_CORPS_CONTENU">
         <form [formGroup]="inscriptionForm" (ngSubmit)="onSubmitForm()">  
