--- a/mbp-webapp/src/app/login/login.component.scss
+++ b/mbp-webapp/src/app/login/login.component.scss
@@ -4,6 +4,40 @@ body {
   background-color: #17a2b8;
   height: 100vh;
 }
+
+.MBP_CORPS {
+  background-image: url('../../assets/img/photo_accueil/page-background-3.jpg');
+  width: 100%;
+  height: 92vh;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.MBP_CORPS_CONTENU {
+  background-color: white;
+  height: 90%;
+}
+
+@media screen and (max-height: 600px) {
+	.h2 {
+		font-size: 3vh;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.h2 {
+		font-size: 5vw;
+	}
+}
+
+.MBP_CORPS_TITRE {
+  background-color: white;
+  height: 10vh;
+}
+
 #login .container #login-row #login-column #login-box {
   margin-top: 120px;
   max-width: 600px;
