--- a/mbp-webapp/src/app/edit-advert/edit-advert.component.html
+++ b/mbp-webapp/src/app/edit-advert/edit-advert.component.html
@@ -1,6 +1,6 @@
 <div class="MBP_CORPS">
   <div class="MBP_CORPS_TITRE">
-    <div class="h2">Création d'annonce</div>
+    <div class="h2 text-center">Modifier une annonce</div>
   </div>
   <div class="MBP_CORPS_CONTENU">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmitForm()">
