--- a/mbp-webapp/src/app/user-liste/user-liste.component.html
+++ b/mbp-webapp/src/app/user-liste/user-liste.component.html
@@ -1,6 +1,6 @@
 <div class="MBP_CORPS">
     <div class="MBP_CORPS_TITRE">
-        <div class="h2">Liste des utilisateurs</div>
+        <div class="h2 text-center">Liste des utilisateurs</div>
     </div>
     <div class="MBP_CORPS_CONTENU">
         <div class="row ROW_USER" *ngFor="let user of obsListUser | async">
