Debut des devs message general : front, liaison front/back, recuperation des infos dans le back

--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -25,8 +25,8 @@
             <li class="nav-item">
                 <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="listeUser">Utilisateurs</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" routerLink="">Messagerie</a>
+            <li class="nav-item"> 
+                <a class="nav-link" routerLinkActive="active" routerLink="messageGeneral">Message Général</a>
             </li>
         </ul>
         <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>    
