--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -16,6 +16,9 @@
           <li class="nav-item">
             <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="listAdverts">Liste des annonces</a>     
           </li>
+		  <li class="nav-item">
+			<a class="nav-link d-inline-block" routerLinkActive="active" routerLink="technicalSupport">Support technique</a>
+		  </li>
         </ul>
         <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>    
         <button type="button" class="btn btn-outline-light"  color ="black" (click)="logout()">Logout</button>
