Technical support finalized - Admin side

--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" routerLink="">Messagerie</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="adminSupport">Support technique</a>
+            </li>
         </ul>
         <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>    
         <button type="button" class="btn btn-outline-light"  color ="black" (click)="logout()">Logout</button>
