correction input date

--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -12,7 +12,7 @@
           <div class="row form-group">
             <div class="col">
               <label for="input-date">date : </label>
-              <input type="text" name="date" id="input-date" class="form-control">
+              <input type="date" name="date" id="input-date" class="form-control">
             </div>
             <div class="col">
               <label for="input-duree-min">durée minimum : </label>
