--- a/mbp-webapp/src/app/acceuil/acceuil.component.html
+++ b/mbp-webapp/src/app/acceuil/acceuil.component.html
@@ -30,3 +30,6 @@
 <div class="MBP-alert">
 	<ngb-alert *ngIf="cancel" [dismissible]="false" type="info" (close)="cancel = false">{{cancel_success}}</ngb-alert>
 </div>
+<div class="MBP-alert">
+	<ngb-alert *ngIf="messageGeneral" [dismissible]="false" type="info" (close)="messageGeneral = false">{{messageGeneral_success}}</ngb-alert>
+</div>
