affichage liste contact + delete

--- a/mbp-webapp/src/app/navbar/navbar.component.scss
+++ b/mbp-webapp/src/app/navbar/navbar.component.scss
@@ -32,3 +32,9 @@ img{
     max-height: 100%;
     display: block;
 }
+
+.white-icon {
+    color: white;
+    margin: 0.25rem 1.5rem 0.25rem 1.5rem !important;
+
+}
