--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -17,6 +17,7 @@
       <td>{{item.dateSeance}}</td>
       <td>{{item.duree}}</td>
       <td>
+        <button type="button" (click)="addParticipation(item.aid)">Participer</button>
         <button type="button" routerLink="/editAdvert/{{item.aid}}">Edit</button>
         <button type="button" class="close" (click)="deleteAdvertById(item.aid)">Delete</button>
       </td>
