--- a/mbp-webapp/src/app/support-admin/support-admin.component.html
+++ b/mbp-webapp/src/app/support-admin/support-admin.component.html
@@ -23,7 +23,9 @@
         </div>
       </div>
       <div class="col-2 ">
-        <button type="button" class="btn btn-danger BOUTON_SUPPRIMER" (click)="confirmDeleteTicket(ticket)">Supprimer</button>
+        <button style="margin-top: 25%" mat-mini-fab color="warn" (click)="confirmDeleteTicket(ticket)">
+          <mat-icon>clear</mat-icon>
+        </button>
       </div>
     </div>
   </div>
