--- a/mbp-webapp/src/app/user-liste/user-liste.component.html
+++ b/mbp-webapp/src/app/user-liste/user-liste.component.html
@@ -4,31 +4,34 @@
 		<div class="h2 text-center">Liste des utilisateurs</div>
 	</div>
 	<div class="MBP_CORPS_CONTENU">
-		<div class="row ROW_USER" *ngFor="let user of obsListUser | async">
-			<div class="col-10 INFO_USER">
-				<div class="row">
-					<div class="col-3">
-						<div class="row">
-							<label class="USER_LABEL">Prénom</label>&nbsp;:&nbsp; <span>
-								{{ user.prenom}} </span>
-						</div>
-						<div class="row">
-							<label class="USER_LABEL">Nom</label>&nbsp;:&nbsp; <span>
-								{{ user.nom}} </span>
-						</div>
-					</div>
-					<div class="col">
-						<div class="row">
-							<label class="USER_LABEL">Username</label>&nbsp;:&nbsp; <span>
-								{{ user.username}} </span>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-2 ">
-				<button type="button" class="btn btn-danger BOUTON_SUPPRIMER"
-					(click)="confirmDeleteUser(user)">Bannir</button>
-			</div>
+    <div *ngFor="let user of obsListUser | async">
+		  <div class="row ROW_USER" *ngIf="myUsername != user.username">
+			  <div class="col-10 INFO_USER">
+				  <div class="row">
+					  <div class="col-3">
+						  <div class="row">
+							  <label class="USER_LABEL">Prénom</label>&nbsp;:&nbsp; <span>
+                  {{ user.prenom}} </span>
+	  					</div>
+		  				<div class="row">
+			  				<label class="USER_LABEL">Nom</label>&nbsp;:&nbsp; <span>
+				  				{{ user.nom}} </span>
+	  					</div>
+		  			</div>
+			  		<div class="col">
+				  		<div class="row">
+					  		<label class="USER_LABEL">Username</label>&nbsp;:&nbsp; <span>
+						  		{{ user.username}} </span>
+	  					</div>
+		  			</div>
+			  	</div>
+	  		</div>
+		  	<div class="col-2 ">
+          <button style="margin-top: 10%" mat-mini-fab color="warn" (click)="confirmDeleteUser(user)">
+            <mat-icon>remove_circle_outline</mat-icon>
+         </button>
+		  	</div>
+      </div>
 		</div>
 	</div>
 	>>>>>>> refs/heads/master
