message when login failed

--- a/mbp-webapp/src/app/login/login.component.scss
+++ b/mbp-webapp/src/app/login/login.component.scss
@@ -51,3 +51,7 @@ body {
 #login .container #login-row #login-column #login-box #login-form #register-link {
   margin-top: -85px;
 }
+
+p{
+	text-align:center;
+}
