--- a/mbp-webapp/src/app/advert-list/advert-list.component.html
+++ b/mbp-webapp/src/app/advert-list/advert-list.component.html
@@ -1,9 +1,9 @@
 <table class="table">
   <thead>
   <tr>
-    <th scope="col">Prénom</th>
     <th scope="col">Nom de l'annonce</th>
-    <th scope="col">Description</th>
+    <th scope="col">Niveau</th>
+    <th scope="col">Type</th>
     <th scope="col">Date</th>
     <th scope="col">Durée</th>
     <th scope="col">Actions</th>
@@ -11,14 +11,18 @@
   </thead>
   <tbody>
     <tr *ngFor="let item of ItemsArray">
-      <td>{{item.nomAnnonce}}</td>
-      <td>{{item.prenom}}</td>
-      <td>{{item.description}}</td>
-      <td>{{item.dateSeance}}</td>
-      <td>{{item.duree}}</td>
+      <td>{{item.nom}}</td>
+      <td>{{item.niveau}}</td>
+      <td>{{item.type}}</td>
+      <td>{{item.date}}</td>
+      <td>{{item.duree * 60000 | date: 'H:mm':'UTC'}}</td>
       <td>
-        <button type="button" routerLink="/editAdvert/{{item.aid}}">Edit</button>
-        <button type="button" class="close" (click)="deleteAdvertById(item.aid)">Delete</button>
+        <button mat-mini-fab color="primary" routerLink="/editAdvert/{{item.aid}}">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-mini-fab color="warn" (click)="deleteAdvertById(item.aid)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </tr>
   </tbody>
