--- a/mbp-webapp/src/app/support/support.component.html
+++ b/mbp-webapp/src/app/support/support.component.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <input type="text" id="object" formControlName="object" class="form-control form-control-sm"/>
+                        <input type="text" id="object" formControlName="object" class="form-control form-control-sm" maxlength="50"/>
                     </div>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <textarea id="description" formControlName="description" class="form-control form-control-sm" rows="5"></textarea>
+                        <textarea id="description" formControlName="description" class="form-control form-control-sm" rows="5" maxlength="500"></textarea>
                     </div>
                 </div>
             </div>
@@ -32,8 +32,8 @@
                 <div class="col-12">
                     <button class="btn float-right MBP_BTN_SUBMIT" type="submit" [disabled]="supportForm.invalid">Envoyer</button>
                 </div>
-            </div>  
-        </form>      
+            </div>
+        </form>
         <p class="text-danger">{{errorMessage}}</p>
     </div>
 </div>
