--- a/mbp-webapp/src/app/edit-advert/edit-advert.component.html
+++ b/mbp-webapp/src/app/edit-advert/edit-advert.component.html
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="form-group col">
           <label for="NomCreaAnnonce">Nom</label>
-          <input type="text" id="NomCreaAnnonce" class="form-control" placeholder="Nom de votre annonce" formControlName="NomCreaAnnonce">
+          <input type="text" id="NomCreaAnnonce" class="form-control" placeholder="Nom de votre annonce" maxlength="50" formControlName="NomCreaAnnonce">
         </div>
         <div class="form-group col">
           <label for="NiveauCreaAnnonce">Niveau pratiquant</label>
@@ -22,7 +22,7 @@
       <div class="MBP_LINE_1PX"></div>
       <div class="form-group">
         <label for="DescriptionCreaAnnonce">Description</label>
-        <input type="txt" id="DescriptionCreaAnnonce" class="form-control"placeholder="Description pour votre annonce" formControlName="DescriptionCreaAnnonce">
+        <textarea type="txt" id="DescriptionCreaAnnonce" class="form-control"placeholder="Description pour votre annonce" maxlength="500" rows="2" formControlName="DescriptionCreaAnnonce"></textarea>
       </div>
       <div class="MBP_LINE_1PX"></div>
       <div class="row">
